--- a/homework-1/index.html
+++ b/homework-1/index.html
@@ -11,9 +11,13 @@
 </head>
     <div class="container">
       <header>
-          <div class="search-bar">
+          <div class="search-bar">          
+            <div class="pages">
+              <button class="btn" id="previous" title="Back button">previous</button>
+              <button class="btn" id="next" title="Next button">Next</button>
+            </div>            
               <div class="search">
-                <input  value="" id="movie-search" type="text" placeholder="Search Movies">
+                <input  class="input-movie"   id="movie-search" type="text" placeholder="Search Movies">
                 <i class="fas fa-search"></i>
               </div>
           </div>
