--- a/homework-1/index.html
+++ b/homework-1/index.html
@@ -13,7 +13,7 @@
       <header>
           <div class="search-bar">          
             <div class="pages">
-              <button class="btn" id="previous" title="Back button">previous</button>
+              <button class="btn" id="previous" title="Back button">Previous</button>
               <button class="btn" id="next" title="Next button">Next</button>
             </div>            
               <div class="search">
